Hud Essentials Added
Spawner & Entities Next

--- a/Assets/_game/UI/PlayerHUD.uxml
+++ b/Assets/_game/UI/PlayerHUD.uxml
@@ -1,7 +1,19 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/_game/UI/MainMenu.uss?fileID=7433441132597879392&amp;guid=c68e98df1fdcafc4ebd0618c383d1aad&amp;type=3#MainMenu" />
     <engine:VisualElement name="Canvas" style="flex-grow: 1;">
-        <engine:VisualElement name="HUD" style="flex-grow: 1;" />
-        <engine:VisualElement name="LoseScreen" style="flex-grow: 1; position: absolute; height: 1080px; width: 1920px;" />
+        <engine:VisualElement name="HUD" style="flex-grow: 1;">
+            <engine:Button text="Button" name="pEnter" />
+        </engine:VisualElement>
+        <engine:VisualElement name="Pause" style="flex-grow: 1;">
+            <engine:Button text="Button" name="pExit" class="button" />
+            <engine:Button text="Button" name="sEnter" class="button" />
+            <engine:Button text="Button" name="Quit" class="button" />
+        </engine:VisualElement>
+        <engine:VisualElement name="Settings" style="flex-grow: 1;">
+            <engine:Button text="Button" name="sExit" class="button" />
+        </engine:VisualElement>
+        <engine:VisualElement name="LoseScreen" style="flex-grow: 1; position: absolute; height: 1080px; width: 1920px;">
+            <engine:Button text="Button" name="Quit" class="button" />
+        </engine:VisualElement>
     </engine:VisualElement>
 </engine:UXML>
