--- a/Assets/_game/UI/PlayerHUD.uxml
+++ b/Assets/_game/UI/PlayerHUD.uxml
@@ -2,18 +2,20 @@
     <Style src="project://database/Assets/_game/UI/MainMenu.uss?fileID=7433441132597879392&amp;guid=c68e98df1fdcafc4ebd0618c383d1aad&amp;type=3#MainMenu" />
     <engine:VisualElement name="Canvas" style="flex-grow: 1;">
         <engine:VisualElement name="HUD" style="flex-grow: 1;">
-            <engine:Button text="Button" name="pEnter" />
+            <engine:Button name="pEnter" text="| |" class="button" style="width: 100px; left: 75px; padding-right: 15px; padding-left: 15px; padding-bottom: 15px; padding-top: 15px; height: 100px;" />
         </engine:VisualElement>
-        <engine:VisualElement name="Pause" style="flex-grow: 1;">
-            <engine:Button text="Button" name="pExit" class="button" />
-            <engine:Button text="Button" name="sEnter" class="button" />
-            <engine:Button text="Button" name="Quit" class="button" />
+        <engine:VisualElement name="Pause" class="menu_Default menu_ExitRight">
+            <engine:Button text="Resume" name="pExit" class="button" style="margin-bottom: 50px;" />
+            <engine:Button text="Settings" name="sEnter" class="button" style="margin-bottom: 50px;" />
+            <engine:Button text="Quit" name="Quit" class="button" style="margin-bottom: 50px;" />
         </engine:VisualElement>
-        <engine:VisualElement name="Settings" style="flex-grow: 1;">
-            <engine:Button text="Button" name="sExit" class="button" />
+        <engine:VisualElement name="Settings" class="menu_Default menu_ExitRight" style="flex-grow: 1; position: absolute;">
+            <engine:Button text="Back" name="sExit" class="button" />
         </engine:VisualElement>
-        <engine:VisualElement name="LoseScreen" style="flex-grow: 1; position: absolute; height: 1080px; width: 1920px;">
-            <engine:Button text="Button" name="Quit" class="button" />
+        <engine:VisualElement name="LoseScreen" class="loseScreen_Default loseScreen_ExitDown">
+            <engine:Label text="WRECKED" name="loseText" class="header" style="align-content: flex-start; bottom: -195px;" />
+            <engine:Button text="Quit" name="Quit" class="button" style="align-self: center; justify-content: flex-start; align-items: center; align-content: flex-start; bottom: -536px;" />
+            <engine:Button text="Retry" name="Retry" class="button" style="align-self: center; bottom: -268px;" />
         </engine:VisualElement>
     </engine:VisualElement>
 </engine:UXML>
