Interaction with buttons
Added
- Enemy Damage
- More Button Functionality
- Lose Screen Works
- MM & Game Transition

What Needs to Be Added:
- Fishing Spot & "Store"/Upgrade Pop-up
- Weapon System
- Interaction button working
- More Hud Elements
- Animations for assets
- Music

--- a/Assets/_game/UI/MainMenu.uss
+++ b/Assets/_game/UI/MainMenu.uss
@@ -60,3 +60,32 @@
 .loseScreen_ExitDown {
     top: 1160px;
 }
+
+.buttonInt_Default {
+    width: 200px;
+    height: 200px;
+    background-color: rgba(154, 78, 0, 0);
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
+    border-top-width: 27px;
+    border-right-width: 27px;
+    border-bottom-width: 27px;
+    border-left-width: 27px;
+    border-top-left-radius: 90px;
+    border-top-right-radius: 90px;
+    border-bottom-right-radius: 90px;
+    border-bottom-left-radius: 90px;
+    position: absolute;
+    top: 548px;
+    left: 1636px;
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out-circ;
+}
+
+.buttonInt_ExitShrink {
+    width: 0;
+    height: 0;
+    opacity: 0;
+}
