--- a/Assets/_game/UI/MainMenu.uxml
+++ b/Assets/_game/UI/MainMenu.uxml
@@ -3,8 +3,15 @@
     <engine:VisualElement name="Canvas" style="flex-grow: 1; background-color: rgb(0, 195, 193);">
         <engine:VisualElement name="Root" style="flex-grow: 1;">
             <engine:Label text="Typical Fishing Game" name="Header" class="header" style="bottom: auto; position: relative; left: -219px;" />
-            <engine:Button text="Play" name="Play" class="button" style="left: 50px;" />
-            <engine:Button text="Quit" name="Quit" class="button" style="left: 50px;" />
+            <engine:Button text="Continue" name="Play" class="button" style="left: 50px; width: 300px;" />
+            <engine:Button text="New Game" name="NewGame" class="button" style="left: 50px; width: 300px;" />
+            <engine:Button text="Quit" name="Quit" class="button" style="left: 50px; width: 300px;" />
         </engine:VisualElement>
+    </engine:VisualElement>
+    <engine:VisualElement name="Record" style="flex-grow: 1; position: absolute; justify-content: center; align-items: center; align-self: flex-end; align-content: center; height: 456px; width: 343px; left: 1321px; top: 248px;">
+        <engine:Label text="Days Since Last Incident: 0" name="DaysRecord" style="font-size: 30px; -unity-font-style: bold; -unity-text-align: upper-center;" />
+        <engine:Label text="Company Income: 0" name="GoldRecord" style="font-size: 30px; -unity-font-style: bold; -unity-text-align: upper-center;" />
+        <engine:Label text="Fish Quota: 0" name="FishRecord" style="font-size: 30px; -unity-font-style: bold; -unity-text-align: upper-center;" />
+        <engine:Label text="Years Experience Req: 0" name="LevelRecord" style="font-size: 30px; -unity-font-style: bold; -unity-text-align: upper-center;" />
     </engine:VisualElement>
 </engine:UXML>
